Created sequencing proportional symbols
Added sequenc chart to scroll through enrollment attributes.

--- a/leaflet-lab/css/styles.css
+++ b/leaflet-lab/css/styles.css
@@ -12,10 +12,24 @@
 }
 
 #panel {
-    width: 16%;
+    width: 26%;
     padding: 20px;
     display: inline-block;
     vertical-align: top;
+    text-align: center;
+    line-height: 42px;
+}
+
+.range-slider {
+    width: 50%;
+}
+
+#forward {
+    float: right;
+}
+
+#reverse {
+    float: left;
 }
 
 
